add hero section + minor improvements

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,6 +46,7 @@
   --radius: 0.625rem;
   --background: #FFFFE3;
   --foreground: #723480;
+  --lavender: #F4F3FF;
   --card: #723480;
   --card-foreground: #FFFFE3;
   --popover: oklch(1 0 0);
